small css fixes and added dark mode

--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,7 @@ body {
 	--columnGap: 4rem;
 	--rowGap: calc(var(--lineHeight) * 2);
 	--mainColor: #000000;
-	--darkmodemaincolor: #ffffff;
+	--darkmodeMaincolor: #ffffff;
 }
 
 html,
@@ -57,13 +57,12 @@ body {
 }
 
 .main {
-	padding-top: 120px;
-	padding-left: 90px;
-	padding-right: 90px;
-	padding-bottom: 90px;
-	background-color: #9CFBB6;
+	padding-top: 190px;
+	padding-left: 120px;
+	padding-right: 120px;
+	padding-bottom: 120px;
+	background-color: #72c579;
 }
-
 .link-list {
 	font-weight: 500;
 	font-size: 1.4rem;
@@ -114,7 +113,7 @@ a {
 	background-position: 0 100%;
 	background-repeat: repeat-x;
 	background-size: 4px 4px;
-	color: #000;
+	color: inherit;
 	text-decoration: none;
 	transition: background-size .2s;
 }
@@ -163,5 +162,28 @@ a:hover {
 
 	body {
 		background-color: #9CFBB6;
+	}
+}
+@media (prefers-color-scheme: dark) {
+	.main {
+		background-color: #333333;
+	}
+	img {
+		border-radius: 3px;
+		width: 97%;
+	}
+	h1 {
+		color: #f5f5f5;
+	}
+	
+	h2 {
+		color: #f5f5f5;
+	}
+	
+	p {
+		color: #f5f5f5;
+	}
+	li {
+		color: #f5f5f5;
 	}
 }
